[package]
name = "studioboard"
version = "0.1.0"
edition = "2021"
description = "A buttery-smooth always-on TUI dashboard for the Mac Studio: system + Apple Silicon metrics, Claude Code usage, and Apple Music with karaoke-synced lyrics."

[[bin]]
name = "studioboard"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.10", features = ["json"] }
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
unicode-width = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
